fixed font-locking for clojurec/clojurescript in polymode + cider
- The issue was in my hook for cider-current-ns, somehow it gets called
without any block info, resulting in unexpected nil file name

- I got this error on each .org file reopening:
```
Polymode error (pm--mode-setup ’clojurec-mode): Wrong type argument: stringp, nil
Error during redisplay: (poly-lock-function 1) signaled (wrong-type-argument stringp nil)
```

--- a/init.org
+++ b/init.org
@@ -995,7 +995,7 @@ Searches for ns in :tangle or :src file, otherwise calls clojure-find-ns."
              (ns-file (or tangle-file
 			  (alist-get :src header-args))))
 
-	(if (not (file-exists-p ns-file))
+	(if (or (eq nil ns-file) (not (file-exists-p ns-file)))
 	    (apply orig-fun args)
 
 	  (with-temp-buffer
