--- a/init.org
+++ b/init.org
@@ -88,7 +88,7 @@ instead of setq, to avoid confusion in Customize interface"
 (custom-set-variables
  '(package-selected-packages
    '(ivy ivy-rich counsel smex keyfreq wgrep
-     ob-clojurescript ob-async async wgrep
+     ob-clojurescript ob-async async
      openwith org-tidy cider treemacs-all-the-icons treemacs
      clojure-mode magit command-log-mode posframe pcre2el dired-ranger
      flycheck flycheck-clj-kondo rainbow-delimiters casual-avy puni
