--- a/init.org
+++ b/init.org
@@ -926,6 +926,23 @@ The defaults are cycled in minibuffer with up/down arrows.
 (define-key org-mode-map (kbd "C-c o") 'org-babel-open-tangle-file)
 #+end_src
 
+*** Noweb references
+#+begin_src elisp :tangle ~/.emacs.d/elisp/org-mode.tangled.el :noweb no
+(defun swiper-noweb-ref-at-point (orig-fn &rest args)
+  "Wraps swiper-thing-at-point to correctly search for org-mode noweb-refs"
+  (interactive)
+  (if-let* ((poly-org-mode? (and (bound-and-true-p polymode-mode)
+				(eq (get-buffer-major-mode (pm-base-buffer))
+				    'org-mode)))
+	    (str (ivy-thing-at-point))
+	    (noweb-ref (and (string-match "<<\\(.*?\\)>>" str)
+			    (match-string 0 str))))
+      (swiper noweb-ref)
+    (apply orig-fn args)))
+
+(advice-add 'swiper-thing-at-point :around 'swiper-noweb-ref-at-point)
+#+end_src
+
 ** Editing
 #+begin_src elisp :tangle ~/.emacs.d/elisp/org-mode.tangled.el
 (setq-mark-as-customized
