sort package list

--- a/init.org
+++ b/init.org
@@ -87,18 +87,16 @@ instead of setq, to avoid confusion in Customize interface"
 ;; add non-default packages that we need
 (custom-set-variables
  '(package-selected-packages
-   '(ivy ivy-rich counsel smex keyfreq wgrep
-     ob-clojurescript ob-async async
-     openwith org-tidy cider treemacs-all-the-icons treemacs
-     clojure-mode magit command-log-mode posframe pcre2el dired-ranger
-     flycheck flycheck-clj-kondo rainbow-delimiters casual-avy puni
-     poly-org yasnippet)))
+   '(async casual-avy cider clojure-mode command-log-mode counsel
+	   dired-ranger flycheck flycheck-clj-kondo ivy ivy-rich
+	   keyfreq magit ob-async ob-clojurescript openwith org-tidy
+	   pcre2el poly-org posframe puni rainbow-delimiters smex
+	   treemacs treemacs-all-the-icons wgrep yasnippet)))
 
 ;; install all non-default packages
 (dolist (pkg package-selected-packages)
   (unless (package-installed-p pkg)
     (package-install pkg)))
-
 
 ;; require all non-default packages
 (dolist (pkg package-selected-packages)
