--- a/init.org
+++ b/init.org
@@ -726,6 +726,14 @@ The defaults are cycled in minibuffer with up/down arrows.
 (global-flycheck-mode)
 #+end_src
 
+** Docs and tooltips
+#+begin_src elisp :tangle ~/.emacs.d/elisp/programming-settings.tangled.el
+;; eldoc causes issues in my setup, sometimes marked region resizes randomly
+;; tried eldoc-box to replace it, but it didn't work most of the time
+;; all this is true for poly-org + clojurec + cider
+;; (remove-hook 'cider-mode-hook #'eldoc-mode)
+#+end_src
+
 ** Parenthesis config
 *** Puni-mode
 #+begin_src elisp :tangle ~/.emacs.d/elisp/programming-settings.tangled.el
@@ -781,7 +789,6 @@ The defaults are cycled in minibuffer with up/down arrows.
 (add-hook 'clojure-mode-hook #'cider-mode)
 (add-hook 'clojurescript-mode-hook #'cider-mode)
 
-(add-hook 'cider-mode-hook #'eldoc-mode)
 (add-hook 'cider-mode-hook #'imenu-add-menubar-index)
 
 ;; I write tests in the same ns as source code, source and tests must be close
