--- a/init.org
+++ b/init.org
@@ -1001,79 +1001,6 @@ Cycles through three states:
 (define-key org-mode-map (kbd "M-s") 'org-babel-demarcate-block)
 #+end_src
 
-** Mode switching - polymode (poly-org)
-I spent 3 days trying to fix this [[https://github.com/polymode/poly-org/issues/53][issue]]. I couldn't do it, so I decided to just
-drop tangle-on-save hook, and to tangle manually from outside source blocks.
-
-*** Flycheck fix
-Prevents flycheck from confusing buffers and breaking down. See this [[https://github.com/polymode/poly-org/issues3/][issue]]
-
-#+begin_src elisp :tangle ~/.emacs.d/elisp/org-mode.tangled.el
-(defun flycheck-buffer-not-indirect-p (&rest _)
-  "Ensure that the current buffer is not indirect."
-  (null (buffer-base-buffer)))
-
-(advice-add 'flycheck-may-check-automatically
-            :before-while #'flycheck-buffer-not-indirect-p)
-#+end_src
-
-*** Source blocks display fix
-#+begin_src elisp :tangle ~/.emacs.d/elisp/org-mode.tangled.el
-;; polymode ignores background face config for both inner modes and org mode
-(add-hook
- 'polymode-init-inner-hook
- (lambda ()
-   (oset pm/chunkmode adjust-face
-	 '(:background "lavender"
-           :extend t))))
-#+end_src
-
-*** Background color fix
-#+begin_src elisp :tangle ~/.emacs.d/elisp/org-mode.tangled.el
-;; these supposed to prevent breaking display of source blocks
-(setq-mark-as-customized
- 'org-adapt-indentation nil
- 'org-startup-indented nil)
-#+end_src
-
-*** Org-mode fold state bug fix (prevent unfolding)
-The bug occurs when point moves in/out of source code blocks. The reason is
-~move-overlay~ fn, which cuts out overlays from one of the buffers.
-
-The issue can be avoided by setting ~org-fold-core-style 'text-properties~, but
-I read that ~org-fold-core-style 'overlays~, is less buggy with poly-org. So I
-decided to stick with this fix instead of changing the setting.
-
-The fix is still WIP, I haven't worked with it extensively.
-
-#+begin_src elisp :tangle ~/.emacs.d/elisp/org-mode.tangled.el
-(defun pm--move-overlays-hack (from-buffer to-buffer)
-  "Delete all overlays in TO-BUFFER, then copy FROM-BUFFER overlays to it."
-  (delete-all-overlays to-buffer)
-;;   (message "\n\n-----------------------------
-;; from-buffer %s to-buffer %s" from-buffer to-buffer)
-  (with-current-buffer from-buffer
-    (let ((overlays (overlays-in 1 (1+ (buffer-size)))))
-      ;; (message "number of overlays %s" (length overlays))
-      (mapc (lambda (o)
-              (unless (or (overlay-get o 'linum-str)
-                          (overlay-get o 'yas--snippet)
-			  (eq (overlay-get o 'face) 'region)
-			  (eq (overlay-get o 'face) 'show-paren-match))
-		;; copying is necessary to preserve folding state in org-mode
-		;; otherwise move-overlay removes overlays in from-buffer
-		(let ((o-copy (copy-overlay o))
-		      (inhibit-redisplay t)
-		      (inhibit-modification-hooks t))
-		  ;; (message "start %s end %s" (overlay-start o) (overlay-end o))
-		  ;; (message "overlay-props %s\n" (overlay-properties o))
-		  (move-overlay o-copy (overlay-start o) (overlay-end o)
-				to-buffer))))
-            overlays))))
-
-(advice-add 'pm--move-overlays :override 'pm--move-overlays-hack)
-#+end_src
-
 ** Code execution
 *** Clojure namespace determination
 I use file from custom :src or :tangle header to determine proper ns for eval
@@ -1089,11 +1016,11 @@ I use file from custom :src or :tangle header to determine proper ns for eval
 
 (defun org-get-ns-file ()
   (let* ((block-info (org-babel-get-src-block-info 'light))
-             (header-args (nth 2 block-info))
-	     (tangle-value (alist-get :tangle header-args))
-	     (tangle-file (and (not (string= tangle-value "no"))
-			       tangle-value))
-             (ns-file (or tangle-file
+         (header-args (nth 2 block-info))
+	 (tangle-value (alist-get :tangle header-args))
+	 (tangle-file (and (not (string= tangle-value "no"))
+			   tangle-value))
+         (ns-file (or tangle-file
 			  (alist-get :src header-args))))
     (if (or (eq nil ns-file) (not (file-exists-p ns-file)))
 	nil
@@ -1129,6 +1056,114 @@ Searches for ns in :tangle or :src file, otherwise calls clojure-find-ns."
 
 (define-key org-mode-map (kbd "C-c a") 'org-agenda)
 #+end_src
+
+
+* Many major mods in one buffer - polymode (poly-org)
+#+begin_src elisp :tangle ./init.el
+(load "~/.emacs.d/elisp/polymode.tangled.el")
+#+end_src
+
+** Flycheck fix
+Prevents flycheck from confusing buffers and breaking down. See this [[https://github.com/polymode/poly-org/issues3/][issue]]
+
+#+begin_src elisp :tangle ~/.emacs.d/elisp/polymode.tangled.el
+(defun flycheck-buffer-not-indirect-p (&rest _)
+  "Ensure that the current buffer is not indirect."
+  (null (buffer-base-buffer)))
+
+(advice-add 'flycheck-may-check-automatically
+            :before-while #'flycheck-buffer-not-indirect-p)
+#+end_src
+
+** Source blocks display fix
+#+begin_src elisp :tangle ~/.emacs.d/elisp/polymode.tangled.el
+;; polymode ignores background face config for both inner modes and org mode
+(add-hook
+ 'polymode-init-inner-hook
+ (lambda ()
+   (oset pm/chunkmode adjust-face
+	 '(:background "lavender"
+           :extend t))))
+#+end_src
+
+** Background color fix
+#+begin_src elisp :tangle ~/.emacs.d/elisp/polymode.tangled.el
+;; these supposed to prevent breaking display of source blocks
+(setq-mark-as-customized
+ 'org-adapt-indentation nil
+ 'org-startup-indented nil)
+#+end_src
+
+** Org-mode fold state bug fix (prevent unfolding)
+The bug occurs when point moves in/out of source code blocks. The reason is
+~move-overlay~ fn, which cuts out overlays from one of the buffers.
+
+The issue can be avoided by setting ~org-fold-core-style 'text-properties~, but
+I read that ~org-fold-core-style 'overlays~, is less buggy with poly-org. So I
+decided to stick with this fix instead of changing the setting.
+
+The fix is still WIP, I haven't worked with it extensively.
+
+#+begin_src elisp :tangle ~/.emacs.d/elisp/polymode.tangled.el
+(defun pm--move-overlays-hack (from-buffer to-buffer)
+  "Delete all overlays in TO-BUFFER, then copy FROM-BUFFER overlays to it."
+  (delete-all-overlays to-buffer)
+;;   (message "\n\n-----------------------------
+;; from-buffer %s to-buffer %s" from-buffer to-buffer)
+  (with-current-buffer from-buffer
+    (let ((overlays (overlays-in 1 (1+ (buffer-size)))))
+      ;; (message "number of overlays %s" (length overlays))
+      (mapc (lambda (o)
+              (unless (or (overlay-get o 'linum-str)
+                          (overlay-get o 'yas--snippet)
+			  (eq (overlay-get o 'face) 'region)
+			  (eq (overlay-get o 'face) 'show-paren-match))
+		;; copying is necessary to preserve folding state in org-mode
+		;; otherwise move-overlay removes overlays in from-buffer
+		(let ((o-copy (copy-overlay o))
+		      (inhibit-redisplay t)
+		      (inhibit-modification-hooks t))
+		  ;; (message "start %s end %s" (overlay-start o) (overlay-end o))
+		  ;; (message "overlay-props %s\n" (overlay-properties o))
+		  (move-overlay o-copy (overlay-start o) (overlay-end o)
+				to-buffer))))
+            overlays))))
+
+(advice-add 'pm--move-overlays :override 'pm--move-overlays-hack)
+#+end_src
+
+** Fix for tangling inside source blocks, when noweb-refs are present
+I spent 3 days trying to fix this [[https://github.com/polymode/poly-org/issues/53][issue]]. After growing my Emacs/poly-org
+understanding by solving other issues, I came up with a solution:
+- Disable rendering
+- Move point to source block declaration
+- Perform tangle
+- Restore point
+
+This hack avoids dealing with all the difficult noweb expansion and its
+conflict with polymode.
+
+#+begin_src elisp :tangle ~/.emacs.d/elisp/polymode.tangled.el
+(defun pm--tangle-inside-source-block ()
+  "If we are inside poly-org source block, go to beginning of current buffer,
+switch to org-mode, tangle, go back, and finally switch back to needed mode."
+  (interactive)
+  (when (and (poly-org-mode?) (org-in-src-block-p t))
+    (let ((inhibit-redisplay t)
+          (inhibit-modification-hooks t)
+	  ;; we don't need any visuals (overlay switching) for this command
+	  (pm--move-overlays-hack (lambda ()))
+	  (curr-point (point)))
+      (goto-char (point-min))
+      (polymode-post-command)
+      (org-babel-tangle)
+      (goto-char curr-point)
+      (polymode-post-command))))
+
+(define-key polymode-mode-map (kbd "C-c C-v C-t")
+	    'pm--tangle-inside-source-block)
+#+end_src
+
 
 
 * File management
