--- a/init.org
+++ b/init.org
@@ -834,6 +834,11 @@ The defaults are cycled in minibuffer with up/down arrows.
 (load "~/.emacs.d/elisp/org-mode.tangled.el")
 #+end_src
 
+** Single-letter hotkeys
+#+begin_src elisp :tangle ~/.emacs.d/elisp/org-mode.tangled.el
+(setq-mark-as-customized 'org-use-speed-commands t)
+#+end_src
+
 ** Initialization
 #+begin_src elisp :tangle ~/.emacs.d/elisp/org-mode.tangled.el
   ;; (require 'org)
