disabled eldoc globally, except for elisp
- It still caused issues with region selection
- Eldoc is sneaky, simply using clojurec-mode-hook to disable it
didn't work. I decided to not bother and just nuked it globally.

--- a/init.org
+++ b/init.org
@@ -751,7 +751,10 @@ The defaults are cycled in minibuffer with up/down arrows.
 ;; eldoc causes issues in my setup, sometimes marked region resizes randomly
 ;; tried eldoc-box to replace it, but it didn't work most of the time
 ;; all this is true for poly-org + clojurec + cider
-;; (remove-hook 'cider-mode-hook #'eldoc-mode)
+
+(global-eldoc-mode -1)
+
+(add-hook 'emacs-lisp-mode-hook (lambda () (eldoc-mode)))
 #+end_src
 
 ** Parenthesis config
