--- a/init.org
+++ b/init.org
@@ -901,7 +901,7 @@ The defaults are cycled in minibuffer with up/down arrows.
 #+begin_src elisp :tangle ~/.emacs.d/elisp/org-mode.tangled.el
 (defun org-cycle-current-subtree (orig-fun &rest args)
   "Cycle fold state of current heading similar to org-shifttab, if org-cycle
-is called with C-u prefix.
+is called with without C-u prefix.
 
 Cycles through three states:
 1. folded (content hidden)
@@ -909,14 +909,14 @@ Cycles through three states:
 3. subtree expanded (everything visible)"
   (interactive)
   (if (eq (prefix-numeric-value current-prefix-arg) 4)
-      (save-excursion
+    (apply orig-fun args)
+    (save-excursion
 	(org-back-to-heading t)
 	(save-restriction
 	  (let ((beg (point))
 		(end (org-end-of-subtree t)))
 	    (narrow-to-region beg end)
-	    (org-cycle-internal-global))))
-    (apply orig-fun args)))
+	    (org-cycle-internal-global))))))
 
 (advice-add 'org-cycle :around 'org-cycle-current-subtree)
 ;; (advice-remove 'org-cycle 'org-cycle-current-subtree)
