--- a/init.org
+++ b/init.org
@@ -909,8 +909,8 @@ Cycles through three states:
 3. subtree expanded (everything visible)"
   (interactive)
   (cond
-   ((not (org-at-heading-p)) (apply orig-fun args))
-   ((eq (prefix-numeric-value current-prefix-arg) 4) (apply orig-fun args))
+   ((or (not (org-at-heading-p))
+	(eq (prefix-numeric-value current-prefix-arg) 4)) (apply orig-fun args))
    (t (save-excursion
 	(let ((beg (progn (org-back-to-heading t) (point)))
               ;; end manipulation needed to not screw up separator newlines
