enable CUA-mode for comfortable key mnemonics
- I keep messing up and using Ctrl-z/x/c/v in a common sense, which
breaks my flow

--- a/init.org
+++ b/init.org
@@ -273,7 +273,7 @@ instead of setq, to avoid confusion in Customize interface"
 *** Copy/paste
 #+begin_src elisp :tangle ~/.emacs.d/elisp/text-settings.tangled.el
 ;; delete active region on yanking (paste)
-(delete-selection-mode 1)
+(cua-mode 1)
 
 (setq-mark-as-customized
  ;; save kill-ring between emacs session, up to 20 entries
