--- a/init.org
+++ b/init.org
@@ -397,7 +397,7 @@ instead of setq, to avoid confusion in Customize interface"
     (inhibit-same-window . t)
     (window-parameters (no-other-window . t)))
 
-   ;; open search matches from ivy-occur buffer in another window
+   ;; open ivy-occur buffer in another window
    ((major-mode . ivy-occur-grep-mode)
     (display-buffer-use-least-recent-window)
     (inhibit-same-window . t)
