--- a/init.org
+++ b/init.org
@@ -465,16 +465,13 @@ instead of setq, to avoid confusion in Customize interface"
 ** Navigation
 *** Buffer/window/frame switching, burying, treemacs
 #+begin_src elisp :tangle ~/.emacs.d/elisp/frame-window-buffer-settings.tangled.el
-(global-set-key (kbd "C-o") 'other-window)
-(define-key dired-mode-map (kbd "C-o") 'other-window)
-(define-key ivy-occur-mode-map (kbd "C-o") 'other-window)
-(define-key ivy-occur-grep-mode-map (kbd "C-o") 'other-window)
-(global-set-key (kbd "M-o") 'other-frame)
+(bind-key* (kbd "C-o") 'other-window)
+(bind-key* (kbd "M-o") 'other-frame)
 (global-set-key (kbd "C-S-b") 'treemacs)
 (global-set-key (kbd "C-x w") 'bury-buffer)
 
-(global-set-key (kbd "s-b") 'my/switch-buffer-here)
-(global-set-key (kbd "s-k") 'kill-buffer)
+(bind-key* (kbd "s-b") 'my/switch-buffer-here)
+(bind-key* (kbd "s-k") 'kill-buffer)
 #+end_src
 
 *** Popping marks
