--- a/init.org
+++ b/init.org
@@ -87,7 +87,7 @@ instead of setq, to avoid confusion in Customize interface"
 ;; add non-default packages that we need
 (custom-set-variables
  '(package-selected-packages
-   '(async casual-avy cider clojure-mode command-log-mode counsel
+   '(async bm casual-avy cider clojure-mode command-log-mode counsel
 	   dired-ranger flycheck flycheck-clj-kondo ivy ivy-rich
 	   keyfreq magit ob-async ob-clojurescript openwith org-tidy
 	   pcre2el poly-org posframe puni rainbow-delimiters smex
@@ -203,13 +203,70 @@ instead of setq, to avoid confusion in Customize interface"
 #+end_src
 
 ** Navigation
+*** Avy
 #+begin_src elisp :tangle ~/.emacs.d/elisp/text-settings.tangled.el
 ;; use avy through Transient menu
 (keymap-global-set "M-g" #'casual-avy-tmenu)
 
 (keymap-global-set "M-SPC" #'avy-goto-word-0)
+#+end_src
 
-(setq-mark-as-customized 'bookmark-save-flag 1)
+*** Bookmarks (bm package)
+#+begin_src elisp :tangle ~/.emacs.d/elisp/text-settings.tangled.el
+(use-package bm
+  :ensure t
+  :demand t
+
+  :init
+  ;; restore on load (even before you require bm)
+  (setq bm-restore-repository-on-load t)
+
+  :config
+  ;; Allow cross-buffer 'next'
+  (setq bm-cycle-all-buffers t)
+
+  ;; where to store persistant files
+  (setq bm-repository-file "~/.emacs.d/bm-repository")
+
+  ;; save bookmarks
+  (setq-default bm-buffer-persistence t)
+
+  ;; Loading the repository from file when on start up.
+  (add-hook 'after-init-hook 'bm-repository-load)
+
+  ;; Saving bookmarks
+  (add-hook 'kill-buffer-hook #'bm-buffer-save)
+
+  ;; Saving the repository to file when on exit.
+  ;; kill-buffer-hook is not called when Emacs is killed, so we
+  ;; must save all bookmarks first.
+  (add-hook 'kill-emacs-hook #'(lambda nil
+                                 (bm-buffer-save-all)
+                                 (bm-repository-save)))
+
+  ;; The `after-save-hook' is not necessary to use to achieve persistence,
+  ;; but it makes the bookmark data in repository more in sync with the file
+  ;; state.
+  (add-hook 'after-save-hook #'bm-buffer-save)
+
+  ;; Restoring bookmarks
+  (add-hook 'find-file-hooks   #'bm-buffer-restore)
+  (add-hook 'after-revert-hook #'bm-buffer-restore)
+
+  ;; The `after-revert-hook' is not necessary to use to achieve persistence,
+  ;; but it makes the bookmark data in repository more in sync with the file
+  ;; state. This hook might cause trouble when using packages
+  ;; that automatically reverts the buffer (like vc after a check-in).
+  ;; This can easily be avoided if the package provides a hook that is
+  ;; called before the buffer is reverted (like `vc-before-checkin-hook').
+  ;; Then new bookmarks can be saved before the buffer is reverted.
+  ;; Make sure bookmarks is saved before check-in (and revert-buffer)
+  (add-hook 'before-revert-hook #'bm-buffer-save)
+
+
+  :bind (("<f2>" . bm-next)
+         ("S-<f2>" . bm-previous)
+         ("C-<f2>" . bm-toggle)))
 #+end_src
 
 ** Display
@@ -472,22 +529,6 @@ instead of setq, to avoid confusion in Customize interface"
 
 (bind-key* (kbd "s-b") 'my/switch-buffer-here)
 (bind-key* (kbd "s-k") 'kill-buffer)
-#+end_src
-
-*** Mark-ring navigation
-#+begin_src elisp :tangle ~/.emacs.d/elisp/frame-window-buffer-settings.tangled.el
-(defun clear-global-mark-ring ()
-  (interactive)
-  (setq global-mark-ring nil)
-  (message "Global mark-ring cleared"))
-
-(defun counsel-global-mark-ring ()
-  (interactive)
-  (let ((mark-ring global-mark-ring))
-    (counsel-mark-ring)))
-
-(bind-key* (kbd "M-m") 'counsel-global-mark-ring)
-(bind-key* (kbd "M-d") 'clear-global-mark-ring)
 #+end_src
 
 *** Tabs
